# Multiagent_ARI

./: FPOP_new.py  SEIR_from_abm.ipynb  SEIR_influenza_multistrain_v2.py  example.py  plot_results.ipynb  pyproject.toml  readme.md  readme.txt  verification.ipynb
FPOP/: FPOP.ipynb  FPOP_develop.py  households_verification.ipynb  simulated_data_several_years_used.csv
data/: readme.txt
data/synthetic_sample_4000/: people.txt
population_sampling/: README.txt  samplng_city_population.ipynb
preprocessing_pipeline/: 0_preprocess_database.ipynb  1_generate_synth_population.ipynb  2_generate_workplaces_data.ipynb  3_work_assign.ipynb  4_generate_schools_data.ipynb  5_school_assign.ipynb  6_split_workplaces.ipynb  7_final_preparation.ipynb  README.txt
results/synthetic_sample_4000/: adult_incidence_0.csv  adult_incidence_1.csv  adult_incidence_2.csv  adult_incidence_3.csv  adult_incidence_4.csv  adult_incidence_5.csv  child_incidence_0.csv  child_incidence_1.csv  child_incidence_2.csv  child_incidence_3.csv  child_incidence_4.csv  child_incidence_5.csv  incidence_seed_0.csv  incidence_seed_1.csv  incidence_seed_2.csv  incidence_seed_3.csv  incidence_seed_4.csv  incidence_seed_5.csv  inf_people_0.json  inf_people_1.json  inf_people_2.json  inf_people_3.json  inf_people_4.json  inf_people_5.json  old_incidence_0.csv  old_incidence_1.csv  old_incidence_2.csv  old_incidence_3.csv  (+15 more)
simulation_influenza/: BR_model_strains_hybrid.py  BR_model_test_hybrid.py  SEIR_influenza_multistrain_old_version.py  __init__.py  agent_based_model.py  data_functions.py  main_pool.py
(+9 files in other folders)
