[tool.poetry]
name = "simulation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
scipy = "^1.14.1"
tqdm = "^4.66.5"
matplotlib = "^3.9.2"


[tool.poetry.dev-dependencies]
ipykernel = "^6.29.5"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
